@@ -15,9 +15,9 @@
 #++
 
 require 'rubygems'
-require 'slf4j'
-require 'slf4j/jcl-over-slf4j'
 
+require 'rjack-slf4j'
+require 'rjack-slf4j/jcl-over-slf4j'
 require 'rjack-httpclient/base'
 
 module RJack
