@@ -3,7 +3,8 @@
 * Update jars and docs for HTTPComponents 4.0 HttpClient and dependencies.
 
 === 3.1.3 (TBD)
-* Update/relax slf4j dependency to '~> 1.5.8' (tested with slf4j 1.5.8.1).
+* Rename as rjack-httpclient
+* Update/relax rjack-slf4j dependency to '~> 1.5.8' (tested with slf4j 1.5.8.1).
 * Replace included commons-codec with rjack-commons-codec gem dependency.
 
 === 3.1.2 (2009-5-29)
